--- a/about-us.html
+++ b/about-us.html
@@ -74,10 +74,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -93,7 +93,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -378,7 +378,7 @@
 <div class="container">
 <div class="about">
 <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12 about_us-img">
-<img src="img/about-1.png" alt="Who We Are" title="Who We Are" class="w-100 rounded">
+<img src="img/about-1.png" loading="lazy" alt="Who We Are" title="Who We Are" class="w-100 rounded">
 </div>
 
 <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-xs-12 about_us-content align-self-center">
@@ -397,7 +397,7 @@
 <div class="container py-5">
 <div class="about-sec">
 <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12 about_us-img">
-<img src="img/about-2.png" alt="What We Do" title="What We Do" class="w-100 rounded">
+<img src="img/about-2.png" loading="lazy" alt="What We Do" title="What We Do" class="w-100 rounded">
 </div>
 
 <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-xs-12 about_us-content align-self-center">
@@ -429,7 +429,7 @@
 <div class="container">
 <div class="about">
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 about_us-img">
-<img src="img/about-3.png" alt="Why Choose Us" title="Why Choose Us" class="w-100 rounded">
+<img src="img/about-3.png" loading="lazy" alt="Why Choose Us" title="Why Choose Us" class="w-100 rounded">
 </div>
 
 <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12 about_us-content align-self-center">
@@ -453,7 +453,7 @@
 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 team-content-side">
 <div class="bg-white p-3">
 <div class="team-imge">
-<img src="img/about-inrderjeet.png" alt="Inderjit Singh" title="Inderjit Singh">
+<img src="img/about-inrderjeet.png" loading="lazy" alt="Inderjit Singh" title="Inderjit Singh">
 </div>
 
 <div class="team-content">
@@ -526,7 +526,7 @@ Balancing her professional and personal life with ease, Harleen is also a mother
 
 <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -579,7 +579,7 @@ Balancing her professional and personal life with ease, Harleen is also a mother
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
