--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="High-efficiency BESS container assembly lines for lithium batteries — designed for assembly, testing, and integration of battery packs in containerized energy storage systems."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/bess-container-assembly-lines.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="BESS Container Assembly Lines for Lithium Batteries | Indygreen"/>
 <meta name="twitter:description" content="Advanced BESS container assembly lines for Lithium Battery Lines — ensuring efficient assembly, testing, and integration for industrial, commercial, and renewable energy applications."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
    <!-- Bootstrap CSS -->
@@ -75,10 +75,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -94,7 +94,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -375,7 +375,7 @@
  <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12 bess">
-        <img src="img/bess-container-main.png" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
+        <img src="img/bess-container-main.png" loading="lazy" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>BESS Container Assembly Lines</strong></h2> <br>
@@ -387,7 +387,7 @@
 <div class="product col-lg-12">
     <div class="product-description col-lg-8">
         <h2><strong>1. Automatic BESS Container Lines</strong></h2> <br>
-        <img src="img/automatic-bess-line.png" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
+        <img src="img/automatic-bess-line.png" loading="lazy" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
     </div>
     <div class="product-description col-lg-4 pt-5">
         <ul>
@@ -402,19 +402,19 @@
 </div>
 <div class="container bess-inner">
   <div class="bess-inner-image">
-    <img src="img/bess-container-inner-1.png" alt="AGV" title="AGV">
+    <img src="img/bess-container-inner-1.png" loading="lazy" alt="AGV" title="AGV">
     <h5 class="text-center">AGV</h5>
   </div>
   <div class="bess-inner-image">
-    <img src="img/bess-container-inner-2.png" alt="Gantry System" title="Gantry System">
+    <img src="img/bess-container-inner-2.png" loading="lazy" alt="Gantry System" title="Gantry System">
     <h5 class="text-center">Gantry System</h5>
   </div>
   <div class="bess-inner-image">
-    <img src="img/bess-container-inner-3.png" alt="Straddle" title="Straddle">
+    <img src="img/bess-container-inner-3.png" loading="lazy" alt="Straddle" title="Straddle">
     <h5 class="text-center">Straddle</h5>
   </div>
   <div class="bess-inner-image">
-    <img src="img/bess-container-inner-4.png" alt="forklift" title="forklift">
+    <img src="img/bess-container-inner-4.png" loading="lazy" alt="forklift" title="forklift">
     <h5 class="text-center">forklift</h5>
   </div>
 </div>
@@ -422,7 +422,7 @@
 <div class="product col-lg-12">
     <div class="product-description col-lg-8">
         <h2><strong>2. Manual BESS Container Lines</strong></h2> <br>
-        <img src="img/manual-bess-line.png" alt="Manual BESS Container Lines" title="Manual BESS Container Lines" class="w-100 mb-3">
+        <img src="img/manual-bess-line.png" loading="lazy" alt="Manual BESS Container Lines" title="Manual BESS Container Lines" class="w-100 mb-3">
     </div>
     <div class="product-description col-lg-4 pt-5">
         <ul>
@@ -469,7 +469,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -522,7 +522,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
