--- a/bess-cooling-system.html
+++ b/bess-cooling-system.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -376,7 +376,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/75-kw.png" class="card-img-top product-img" alt="75KW Chiller in India" title="75KW Chiller in India">
+        <img src="img/75-kw.png" loading="lazy" class="card-img-top product-img" alt="75KW Chiller in India" title="75KW Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">75KW Chiller</h5>
@@ -391,7 +391,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/90kw.png" class="card-img-top product-img" alt="90KW Chiller in India" title="90KW Chiller in India">
+        <img src="img/90kw.png" loading="lazy" class="card-img-top product-img" alt="90KW Chiller in India" title="90KW Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">90KW Chiller</h5>
@@ -406,7 +406,7 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/xfree-cooling.png" class="card-img-top product-img" alt="XFreeCooling Dual-Circuit Chiller in India" title="XFreeCooling Dual-Circuit Chiller in India">
+        <img src="img/xfree-cooling.png" loading="lazy" class="card-img-top product-img" alt="XFreeCooling Dual-Circuit Chiller in India" title="XFreeCooling Dual-Circuit Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">XFree Cooling Dual - Circuit Chiller</h5>
@@ -424,7 +424,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/door-mounted.png" class="card-img-top product-img" alt="Door Mounted Chiller in India" title="Door Mounted Chiller in India">
+        <img src="img/door-mounted.png" loading="lazy" class="card-img-top product-img" alt="Door Mounted Chiller in India" title="Door Mounted Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Door Mounted Chiller</h5>
@@ -438,7 +438,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/hoizon.png" class="card-img-top product-img" alt="Horizontal Embedded Chiller in India" title="Horizontal Embedded Chiller in India">
+        <img src="img/hoizon.png" loading="lazy" class="card-img-top product-img" alt="Horizontal Embedded Chiller in India" title="Horizontal Embedded Chiller in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Horizontal Embedded Chiller</h5>
@@ -455,7 +455,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/ultra-thin.png" class="card-img-top product-img" alt="Ultra-Thin Dehumidifier in India" title="Ultra-Thin Dehumidifier in India">
+        <img src="img/ultra-thin.png" loading="lazy" class="card-img-top product-img" alt="Ultra-Thin Dehumidifier in India" title="Ultra-Thin Dehumidifier in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Ultra - Thin Dehumidifier</h5>
@@ -502,7 +502,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -555,7 +555,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
