--- a/contact-us.html
+++ b/contact-us.html
@@ -74,10 +74,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -93,7 +93,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -380,7 +380,7 @@
     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
     <div class="single-info text-center">
     <div class="info-icon1">
-    <img src="img/address.png" alt="Corporate Office" title="Corporate Office">
+    <img src="img/address.png" loading="lazy" alt="Corporate Office" title="Corporate Office">
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Corporate Office</span>
@@ -395,7 +395,7 @@
     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
     <div class="single-info text-center">
     <div class="info-icon1">
-    <img src="img/address.png" alt="Works" title="Works">
+    <img src="img/address.png" loading="lazy" alt="Works" title="Works">
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Works</span>
@@ -409,7 +409,7 @@
     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
     <div class="single-info text-center">
     <div class="info-icon1">
-    <img src="img/address.png" alt="Europe" title="Europe">
+    <img src="img/address.png" loading="lazy" alt="Europe" title="Europe">
     </div>
     <div class="info-content text-center">
       <span class="title">Global Sales Office</span>
@@ -432,7 +432,7 @@
     <div class="col-md-4">
     <div class="single-info height-0 text-center">
     <div class="info-icon1">
-    <img src="img/call.png" alt="Phone" title="Phone">
+    <img src="img/call.png" loading="lazy" alt="Phone" title="Phone">
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Phone</span>
@@ -448,7 +448,7 @@
     <div class="col-md-4">
     <div class="single-info height-0 text-center">
     <div class="info-icon1">
-    <img src="img/mail.png" alt="Mail" title="Mail">
+    <img src="img/mail.png" loading="lazy" alt="Mail" title="Mail">
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Mail (General)</span>
@@ -461,7 +461,7 @@
     <div class="col-md-4">
     <div class="single-info height-0 text-center">
     <div class="info-icon1">
-    <img src="img/mail.png" alt="Mail" title="Mail">
+    <img src="img/mail.png" loading="lazy" alt="Mail" title="Mail">
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Mail (Global)</span> <br>
@@ -577,7 +577,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -630,7 +630,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
