--- a/cylindrical-battery-pack-testers.html
+++ b/cylindrical-battery-pack-testers.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="High-precision Cylindrical battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/cylindrical-battery-pack-testers.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies"/>
 <meta name="twitter:description" content="Advanced Cylindrical battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -383,7 +383,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="EOL Testers in India"><img src="img/eol-testers.png" class="card-img-top product-img" alt="EOL Testers in India" title="EOL Testers in India"></a>
+        <a href="#" title="EOL Testers in India"><img src="img/eol-testers.png" loading="lazy" class="card-img-top product-img" alt="EOL Testers in India" title="EOL Testers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">EOL Testers</h5>
@@ -397,7 +397,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Power Battery Test System in India"><img src="img/power-battery.png" class="card-img-top product-img" alt="Power Battery Test System in India" title="Power Battery Test System in India"></a>
+        <a href="#" title="Power Battery Test System in India"><img src="img/power-battery.png" loading="lazy" class="card-img-top product-img" alt="Power Battery Test System in India" title="Power Battery Test System in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Power Battery Test System</h5>
@@ -410,7 +410,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="High voltage Battery Test System in India"><img src="img/high-voltage.png" class="card-img-top product-img" alt="High voltage Battery Test System in India" title="High voltage Battery Test System in India"></a>
+        <a href="#" title="High voltage Battery Test System in India"><img src="img/high-voltage.png" loading="lazy" class="card-img-top product-img" alt="High voltage Battery Test System in India" title="High voltage Battery Test System in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">High voltage Battery Test System</h5>
@@ -428,7 +428,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="cylindrical-battery-pack-testers-modules.html"><img src="img/cylindrical-battery-pack-tester.png" class="card-img-top product-img" alt="20V - 100V / 10A - 100A" title="20V - 100V / 10A - 100A"></a>
+        <a href="cylindrical-battery-pack-testers-modules.html"><img src="img/cylindrical-battery-pack-tester.png" loading="lazy" class="card-img-top product-img" alt="20V - 100V / 10A - 100A" title="20V - 100V / 10A - 100A"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">20V - 100V / 10A - 100A</h5>
@@ -479,7 +479,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -532,7 +532,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
