--- a/lithium-cells.html
+++ b/lithium-cells.html
@@ -75,10 +75,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -94,7 +94,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -381,11 +381,11 @@
     <p>18650 / 21700 / 26650 / 32700 / 32140 / 33140</p>
     <h3 class="font-weight-600 text-center"><u>Our Suppliers</u></h3>
     <div class="cylindrical-logos">
-      <img src="img/lithium-cells/fb.png" alt="FB Technology" title="FB Technology">
-      <img src="img/lithium-cells/bak.png" alt="Bak" title="Bak">
-      <img src="img/lithium-cells/gotion.png" alt="Gotion" title="Gotion">
-      <img src="img/lithium-cells/dmfgc.png" alt="DMEGC" title="DMEGC">
-      <img src="img/lithium-cells/ten-power.png" alt="Tenpower" title="Tenpower">
+      <img src="img/lithium-cells/fb.png" loading="lazy" alt="FB Technology" title="FB Technology">
+      <img src="img/lithium-cells/bak.png" loading="lazy" alt="Bak" title="Bak">
+      <img src="img/lithium-cells/gotion.png" loading="lazy" alt="Gotion" title="Gotion">
+      <img src="img/lithium-cells/dmfgc.png" loading="lazy" alt="DMEGC" title="DMEGC">
+      <img src="img/lithium-cells/ten-power.png" loading="lazy" alt="Tenpower" title="Tenpower">
     </div>
   </div>
  </div>
@@ -397,14 +397,14 @@
     <p>100AH - 680AH</p>
     <h3 class="font-weight-600 text-center"><u>Our Suppliers</u></h3>
     <div class="cylindrical-logos">
-      <img src="img/lithium-cells/p-cell-1.png" alt="Eve Energy" title="Eve Energy">
-      <img src="img/lithium-cells/p-cell-2.png" alt="Highstar" title="Highstar">
-      <img src="img/lithium-cells/p-cell-3.png" alt="Gangfeng" title="Gangfeng">
-      <img src="img/lithium-cells/p-cell-4.png" alt="Svolt" title="Svolt">
-      <img src="img/lithium-cells/p-cell-5.png" alt="Narada" title="Narada">
-      <img src="img/lithium-cells/p-cell-6.png" alt="Calb" title="Calb">
-      <img src="img/lithium-cells/p-cell-7.png" alt="Catl" title="Catl">
-      <img src="img/lithium-cells/p-cell-8.png" alt="Rept Battero" title="Rept Battero">
+      <img src="img/lithium-cells/p-cell-1.png" loading="lazy" alt="Eve Energy" title="Eve Energy">
+      <img src="img/lithium-cells/p-cell-2.png" loading="lazy" alt="Highstar" title="Highstar">
+      <img src="img/lithium-cells/p-cell-3.png" loading="lazy" alt="Gangfeng" title="Gangfeng">
+      <img src="img/lithium-cells/p-cell-4.png" loading="lazy" alt="Svolt" title="Svolt">
+      <img src="img/lithium-cells/p-cell-5.png" loading="lazy" alt="Narada" title="Narada">
+      <img src="img/lithium-cells/p-cell-6.png" loading="lazy" alt="Calb" title="Calb">
+      <img src="img/lithium-cells/p-cell-7.png" loading="lazy" alt="Catl" title="Catl">
+      <img src="img/lithium-cells/p-cell-8.png" loading="lazy" alt="Rept Battero" title="Rept Battero">
     </div>
   </div>
  </div>
@@ -442,7 +442,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -495,7 +495,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
