--- a/pv-reliability-turnkey-lab.html
+++ b/pv-reliability-turnkey-lab.html
@@ -82,10 +82,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -101,7 +101,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -383,7 +383,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/steady-state-simulator.png" alt="Steady-state simulator in India" title="Steady-state simulator in India" class="w-100">
+        <img src="img/steady-state-simulator.png" loading="lazy" alt="Steady-state simulator in India" title="Steady-state simulator in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Steady-state simulator</strong></h2> <br>
@@ -485,7 +485,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/dynamic-and-static.png" alt="Dynamic and Static Load Testing Machine in India" title="Dynamic and Static Load Testing Machine in India" class="w-100">
+        <img src="img/dynamic-and-static.png" loading="lazy" alt="Dynamic and Static Load Testing Machine in India" title="Dynamic and Static Load Testing Machine in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h3><strong>Dynamic and Static Load Testing Machine</strong></h3> <br><br>
@@ -507,7 +507,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/humidity-freeze-chamber.png" alt="Humidity-freeze chamber in India" title="Humidity-freeze chamber in India" class="w-100">
+        <img src="img/humidity-freeze-chamber.png" loading="lazy" alt="Humidity-freeze chamber in India" title="Humidity-freeze chamber in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h3><strong>Humidity-freeze chamber</strong></h3> <br>
@@ -611,7 +611,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -664,7 +664,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
