--- a/raw-materials.html
+++ b/raw-materials.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -382,7 +382,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-cells.html" title="Solar Cells in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Solar Cells in India" title="Solar Cells in India"></a>
+        <a href="solar-cells.html" title="Solar Cells in India"><img src="img/solar-cells.png" loading="lazy" class="card-img-top product-img" alt="Solar Cells in India" title="Solar Cells in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title"> Solar Cells</h5>
@@ -399,7 +399,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-glass.html" title="Solar Glass in India"><img src="img/solar-glass.png" class="card-img-top product-img" alt="Solar Glass in India" title="Solar Glass in India"></a>
+        <a href="solar-glass.html" title="Solar Glass in India"><img src="img/solar-glass.png" loading="lazy" class="card-img-top product-img" alt="Solar Glass in India" title="Solar Glass in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Glass</h5>
@@ -416,7 +416,7 @@
     <!-- Card 3 -->
       <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-aluminium-frame.html" title="Solar Aluminum Frame in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India"></a>
+        <a href="solar-aluminium-frame.html" title="Solar Aluminum Frame in India"><img src="img/aluminum-frames.png" loading="lazy" class="card-img-top product-img" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Aluminum Frame</h5>
@@ -436,7 +436,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-junction-box.html" title="Solar Junction Box in India"><img src="img/solar-junction-box.png" class="card-img-top product-img" alt="Solar Junction Box in India" title="Solar Junction Box in India"></a>
+        <a href="solar-junction-box.html" title="Solar Junction Box in India"><img src="img/solar-junction-box.png" loading="lazy" class="card-img-top product-img" alt="Solar Junction Box in India" title="Solar Junction Box in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title"> Solar Junction Box</h5>
@@ -453,7 +453,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-sealent-and-bonding.html" title="Solar Sealant and Bonding in India"><img src="img/solar-sealent-and-bonding.png" class="card-img-top product-img" alt="Solar Sealant and Bonding in India" title="Solar Sealant and Bonding in India"></a>
+        <a href="solar-sealent-and-bonding.html" title="Solar Sealant and Bonding in India"><img src="img/solar-sealent-and-bonding.png" loading="lazy" class="card-img-top product-img" alt="Solar Sealant and Bonding in India" title="Solar Sealant and Bonding in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Sealant and Bonding</h5>
@@ -470,7 +470,7 @@
     <!-- Card 3 -->
       <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solder-wire-and-colar-flux.html" title="Solder Wire & Solar Flux in India"><img src="img/solar-wire-and-plugs.png" class="card-img-top product-img" alt="Solder Wire & Solar Flux in India" title="Solder Wire & Solar Flux in India"></a>
+        <a href="solder-wire-and-colar-flux.html" title="Solder Wire & Solar Flux in India"><img src="img/solar-wire-and-plugs.png" loading="lazy" class="card-img-top product-img" alt="Solder Wire & Solar Flux in India" title="Solder Wire & Solar Flux in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solder Wire & Solar Flux</h5>
@@ -519,7 +519,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -572,7 +572,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
