--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="Efficient semi-automatic assembly lines for prismatic lithium batteries — designed for cell welding, assembly, and quality testing to ensure high productivity and reliability."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/semi-auto-prismatic-lines.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/semi-auto-prismatic-line.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/semi-auto-prismatic-line.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Semi-Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies"/>
 <meta name="twitter:description" content="Semi-auto lines for prismatic lithium battery production — precision-engineered for efficient assembly, welding, and testing operations."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/semi-auto-prismatic-line.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/semi-auto-prismatic-line.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -76,10 +76,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -95,7 +95,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -380,7 +380,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/semi-2.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
+        <img src="img/semi-2.png" loading="lazy" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Semi Auto Lines</strong></h2> <br>
@@ -394,7 +394,7 @@
     <p>Our Prismatic battery packs are designed for a wide range of <strong>industrial and consumer applications</strong>, including:</p>
     <div class="app-sec col-lg-12 justify-content-center">
     <div class="app-image col-lg-10">
-      <img src="img/prismatic-application.png" alt="Applications of Semi Auto Lines" title="Applications of Semi Auto Lines">
+      <img src="img/prismatic-application.png" loading="lazy" alt="Applications of Semi Auto Lines" title="Applications of Semi Auto Lines">
     </div>
     </div>
 </div>
@@ -406,7 +406,7 @@
        <p>The line incorporates a Module Section (1200 × 800 mm) and a Pack Section (1900 × 1000 mm), designed for optimal space utilization and seamless integration. By combining advanced automation with skilled human operation, this setup ensures consistent quality, reduced cycle time, and enhanced productivity</p>
     </div>
      <div class="products-image col-lg-6">
-        <img src="img/semi-layout.png" alt="Layout" title="Layout" class="w-100">
+        <img src="img/semi-layout.png" loading="lazy" alt="Layout" title="Layout" class="w-100">
     </div>
 </div>
 </div>
@@ -461,7 +461,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -514,7 +514,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
