--- a/automatic-lines.html
+++ b/automatic-lines.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="Fully automated lines for prismatic lithium battery production — designed for high-speed cell assembly, welding, and testing with maximum efficiency and precision."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/automatic-lines.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/automatic-line.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/automatic-line.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Automatic Prismatic Battery Lines | Indygreen"/>
 <meta name="twitter:description" content="Indygreen Technologies offers advanced automatic lines for prismatic lithium battery assembly, welding, and testing — ensuring speed, accuracy, and superior quality."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/automatic-line.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/automatic-line.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
    <!-- Bootstrap CSS -->
@@ -75,10 +75,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -94,7 +94,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -379,7 +379,7 @@
 <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12">
-        <img src="img/auto-matic.png" alt="Automatic Line in India" title="Automatic Line in India" class="w-100">
+        <img src="img/auto-matic.png" loading="lazy" alt="Automatic Line in India" title="Automatic Line in India" class="w-100">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>Automatic Line</strong></h2> <br>
@@ -399,14 +399,14 @@
        </ul>
     </div>
      <div class="products-image col-lg-5">
-        <img src="img/auto-matic-2.png" alt="Automatic Line" title="Automatic Line" class="w-100">
+        <img src="img/auto-matic-2.png" loading="lazy" alt="Automatic Line" title="Automatic Line" class="w-100">
     </div>
 </div>
 </div>-->
 <div class="container py-3">
 <div class="product col-lg-12">
    <div class="products-image col-lg-5">
-        <img src="img/auto-matic-3.png" alt="Automatic Line" title="Automatic Line" class="w-100">
+        <img src="img/auto-matic-3.png" loading="lazy" alt="Automatic Line" title="Automatic Line" class="w-100">
     </div>
     <div class="product-description application-sec col-lg-7 pr-4">
         <h2><strong>Cell to Module Line Overview</strong></h2> <br>
@@ -431,7 +431,7 @@
        </ul>
     </div>
      <div class="products-image col-lg-5">
-        <img src="img/auto-matic-4.png" alt="Automatic Line" title="Automatic Line" class="w-100">
+        <img src="img/auto-matic-4.png" loading="lazy" alt="Automatic Line" title="Automatic Line" class="w-100">
     </div>
 </div>
 </div>
@@ -470,7 +470,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -523,7 +523,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
