--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -376,7 +376,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India">
+        <img src="img/temperature-test-chamber.png" loading="lazy" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Temperature Test Chamber</h5>
@@ -392,7 +392,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/humidity-tester.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India">
+        <img src="img/humidity-tester.png" loading="lazy" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Humidity Tester</h5>
@@ -408,7 +408,7 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/vibration-tester.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India">
+        <img src="img/vibration-tester.png" loading="lazy" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Vibration Tester</h5>
@@ -427,7 +427,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/explosion-chamber.png" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India">
+        <img src="img/explosion-chamber.png" loading="lazy" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Explosion Proof Chambers</h5>
@@ -442,7 +442,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/cycling-test-chamber.png" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India">
+        <img src="img/cycling-test-chamber.png" loading="lazy" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cycling Test Chamber</h5>
@@ -493,7 +493,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -546,7 +546,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
