--- a/cell-testers-for-prismatic.html
+++ b/cell-testers-for-prismatic.html
@@ -83,10 +83,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -102,7 +102,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -386,7 +386,7 @@
  <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12 bess">
-        <img src="img/prismatic-cell-test.png" alt="Prismatic Cell Testers" title="Prismatic Cell Testers" class="w-100 mb-3">
+        <img src="img/prismatic-cell-test.png" loading="lazy" alt="Prismatic Cell Testers" title="Prismatic Cell Testers" class="w-100 mb-3">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>Available Models</strong></h2> <br>
@@ -406,7 +406,7 @@
   <div class="row g-4">
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 30A in India"><img src="img/5v-30a.png" class="card-img-top product-img" alt="5V 30A in India" title="5V 30A in India"></a>
+        <a href="#" title="5V 30A in India"><img src="img/5v-30a.png" loading="lazy" class="card-img-top product-img" alt="5V 30A in India" title="5V 30A in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 30A <br> (8/16/32/64/128) CH</h5>
@@ -420,7 +420,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 60A in India"><img src="img/5v-60a.png" class="card-img-top product-img" alt="5V 60A in India" title="5V 60A in India"></a>
+        <a href="#" title="5V 60A in India"><img src="img/5v-60a.png" loading="lazy" class="card-img-top product-img" alt="5V 60A in India" title="5V 60A in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 60A <br> (8/16/32/64) CH </h5>
@@ -433,7 +433,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 100A in India"><img src="img/5v-100a.png" class="card-img-top product-img" alt="5V 100A in India" title="5V 100A in India"></a>
+        <a href="#" title="5V 100A in India"><img src="img/5v-100a.png" loading="lazy" class="card-img-top product-img" alt="5V 100A in India" title="5V 100A in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 100A <br>(16/32/40/38) CH</h5>
@@ -451,7 +451,7 @@
   <div class="row g-4">
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 200A in India"><img src="img/5v-200a.png" class="card-img-top product-img" alt="5V 200A in India" title="5V 200A in India"></a>
+        <a href="#" title="5V 200A in India"><img src="img/5v-200a.png" loading="lazy" class="card-img-top product-img" alt="5V 200A in India" title="5V 200A in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 200A <br> (8/16/32) CH</h5>
@@ -465,7 +465,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 300A in India"><img src="img/5v-300a.png" class="card-img-top product-img" alt="5V 300A in India" title="5V 300A in India"></a>
+        <a href="#" title="5V 300A in India"><img src="img/5v-300a.png" loading="lazy" class="card-img-top product-img" alt="5V 300A in India" title="5V 300A in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 300A <br> (4/8/16) CH</h5>
@@ -513,7 +513,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -566,7 +566,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
