--- a/cell-testers.html
+++ b/cell-testers.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="High-precision cell testers for lithium battery production — designed for accurate testing of capacity, voltage, and performance to ensure superior quality control."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/cell-testers.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/cell-tester.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/cell-tester.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Cell Testers for Lithium Battery Manufacturing | Indygreen Technologies"/>
 <meta name="twitter:description" content="Advanced lithium cell testers ensuring accuracy, reliability, and efficiency in battery production and quality testing."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/cell-tester.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/cell-tester.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -380,7 +380,7 @@
  <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12 bess">
-        <img src="img/cylinderical-cell-tester-main.png" alt="Cell Testers" title="Cell Testers" class="w-100 mb-3">
+        <img src="img/cylinderical-cell-tester-main.png" loading="lazy" alt="Cell Testers" title="Cell Testers" class="w-100 mb-3">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>Available Models</strong></h2> <br>
@@ -403,7 +403,7 @@
    
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 3A 512CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
+        <a href="#" title="5V 3A 512CH in India"><img src="img/5v-3a-512.png" loading="lazy" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 3A 512CH</h5>
@@ -417,7 +417,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 6A 512CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
+        <a href="#" title="5V 6A 512CH in India"><img src="img/5v-6a-512.png" loading="lazy" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 6A 512CH</h5>
@@ -430,7 +430,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 10A 512/256CH in India"><img src="img/5v-10a-512.png" class="card-img-top product-img" alt="5V 10A 512/256CH in India" title="5V 10A 512/256CH in India"></a>
+        <a href="#" title="5V 10A 512/256CH in India"><img src="img/5v-10a-512.png" loading="lazy" class="card-img-top product-img" alt="5V 10A 512/256CH in India" title="5V 10A 512/256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 10A 512/256CH</h5>
@@ -450,7 +450,7 @@
     
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 20A 256CH in India"><img src="img/5v-20a-512.png" class="card-img-top product-img" alt="5V 20A 256CH in India" title="5V 20A 256CH in India"></a>
+        <a href="#" title="5V 20A 256CH in India"><img src="img/5v-20a-512.png" loading="lazy" class="card-img-top product-img" alt="5V 20A 256CH in India" title="5V 20A 256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 20A 256CH</h5>
@@ -465,7 +465,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 30A 256CH in India"><img src="img/5v-20a-512.png" class="card-img-top product-img" alt="5V 30A 256CH in India" title="5V 30A 256CH in India"></a>
+        <a href="#" title="5V 30A 256CH in India"><img src="img/5v-20a-512.png" loading="lazy" class="card-img-top product-img" alt="5V 30A 256CH in India" title="5V 30A 256CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 30A 256CH</h5>
@@ -478,7 +478,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 6A 80CH in India"><img src="img/5v-6a-80.png" class="card-img-top product-img" alt="5V 6A 80CH in India" title="5V 6A 80CH in India"></a>
+        <a href="#" title="5V 6A 80CH in India"><img src="img/5v-6a-80.png" loading="lazy" class="card-img-top product-img" alt="5V 6A 80CH in India" title="5V 6A 80CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 6A 80CH <br>(with temperature sensor)</h5>
@@ -496,7 +496,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="5V 20A 8CH in India"><img src="img/5V-20A-8CH.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
+        <a href="#" title="5V 20A 8CH in India"><img src="img/5V-20A-8CH.png" loading="lazy" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 20A 8CH <br>(Neware)</h5>
@@ -543,7 +543,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -596,7 +596,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
