--- a/cylindrical-batteries-lines.html
+++ b/cylindrical-batteries-lines.html
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -381,7 +381,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="turnkey-assembly-lines.html" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"><img src="img/assembly-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line Cylindrical Batteries Lines in India" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"></a>
+        <a href="turnkey-assembly-lines.html" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"><img src="img/assembly-line.png" loading="lazy" class="card-img-top product-img" alt="Turnkey Assembly Line Cylindrical Batteries Lines in India" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Turnkey Assembly Lines</h5>
@@ -398,7 +398,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="cell-testers.html" title="Cell Testers Cylindrical Batteries Lines in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers Cylindrical Batteries Lines in India" title="Cell Testers Cylindrical Batteries Lines in India"></a>
+        <a href="cell-testers.html" title="Cell Testers Cylindrical Batteries Lines in India"><img src="img/cell-testers.png" loading="lazy" class="card-img-top product-img" alt="Cell Testers Cylindrical Batteries Lines in India" title="Cell Testers Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
@@ -415,7 +415,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="sorting-machine.html" title="Sorting Machine Cylindrical Batteries Lines in India"><img src="img/sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine Cylindrical Batteries Lines in India" title="Sorting Machine Cylindrical Batteries Lines in India"></a>
+        <a href="sorting-machine.html" title="Sorting Machine Cylindrical Batteries Lines in India"><img src="img/sorting-machine.png" loading="lazy" class="card-img-top product-img" alt="Sorting Machine Cylindrical Batteries Lines in India" title="Sorting Machine Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
@@ -436,7 +436,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="welding-machines.html" title="Welding Machines Cylindrical Batteries Lines in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines Cylindrical Batteries Lines in India" title="Welding Machines Cylindrical Batteries Lines in India"></a>
+        <a href="welding-machines.html" title="Welding Machines Cylindrical Batteries Lines in India"><img src="img/welding-machines.png" loading="lazy" class="card-img-top product-img" alt="Welding Machines Cylindrical Batteries Lines in India" title="Welding Machines Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Welding Machines</h5>
@@ -451,7 +451,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="cylindrical-battery-pack-testers.html"><img src="img/cylindrical-battery-pack-tester.png" class="card-img-top product-img" alt="Cylindrical Battery Pack Tester" title="Cylindrical Battery Pack Tester"></a>
+        <a href="cylindrical-battery-pack-testers.html"><img src="img/cylindrical-battery-pack-tester.png" loading="lazy" class="card-img-top product-img" alt="Cylindrical Battery Pack Tester" title="Cylindrical Battery Pack Tester"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cylindrical Battery Pack Tester</h5>
@@ -502,7 +502,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -555,7 +555,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
