--- a/cylindrical-battery-pack-testers-modules.html
+++ b/cylindrical-battery-pack-testers-modules.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="High-precision Cylindrical battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/cylindrical-battery-pack-testers.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen"/>
 <meta name="twitter:description" content="Advanced Cylindrical battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -383,7 +383,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-5">
-          <img src="img/cylindrical-battery-inner.png" alt="Cylindrical Battery Pack testers" title="Cylindrical Battery Pack testers" class="w-100 mb-3"><br>
+          <img src="img/cylindrical-battery-inner.png" loading="lazy" alt="Cylindrical Battery Pack testers" title="Cylindrical Battery Pack testers" class="w-100 mb-3"><br>
     </div>
     <div class="product-description col-lg-7 sort">
        <h2><strong>Cylindrical Battery Pack testers Modules</strong></h2> <br>
@@ -433,7 +433,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -486,7 +486,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
