--- a/laser-welding-machines.html
+++ b/laser-welding-machines.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="Precision laser welding machines for lithium battery manufacturing — designed for high-speed, accurate, and durable welds across cylindrical, prismatic, and pouch cell lines."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/laser-welding-machines.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/laser-welding-machine.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/laser-welding-machine.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Laser Welding Machines for Lithium Battery Assembly | Indygreen Technologies"/>
 <meta name="twitter:description" content="Advanced laser welding machines for lithium battery production — delivering precision, durability, and efficiency in automated assembly lines."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/laser-welding-machine.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/laser-welding-machine.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -76,10 +76,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -95,7 +95,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -382,7 +382,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="3KW Laser Welding Machine in India" title="3KW Laser Welding Machine in India">
+        <img src="img/prismatic-welding-machine.png" loading="lazy" class="card-img-top product-img" alt="3KW Laser Welding Machine in India" title="3KW Laser Welding Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">3KW <br>(Laser Welding Machine)</h5>
@@ -398,7 +398,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="4KW Laser Welding Machine in India" title="4KW Laser Welding Machine in India">
+        <img src="img/prismatic-welding-machine.png" loading="lazy" class="card-img-top product-img" alt="4KW Laser Welding Machine in India" title="4KW Laser Welding Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">4KW <br>(Laser Welding Machine)</h5>
@@ -413,7 +413,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/welding-6kw.png" class="card-img-top product-img" alt="6KW Laser Welding Machine in India" title="6KW Laser Welding Machine in India">
+        <img src="img/welding-6kw.png" loading="lazy" class="card-img-top product-img" alt="6KW Laser Welding Machine in India" title="6KW Laser Welding Machine in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">6KW <br>(Laser Welding Machine)</h5>
@@ -462,7 +462,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -515,7 +515,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
