--- a/lib-separator-lines.html
+++ b/lib-separator-lines.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="High-efficiency LIB separator lines for lithium battery cells — designed for precise separator coating, drying, and quality assurance in cylindrical, prismatic, and pouch battery production."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/lib-separator-lines.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/lib-separator-lines.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/lib-separator-lines.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="LIB Separator Lines for Lithium Battery Cell Lines | Indygreen"/>
 <meta name="twitter:description" content="Precision LIB separator lines for lithium battery production — ensuring consistent separator quality and reliability for all types of lithium cells."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/lib-separator-lines.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/lib-separator-lines.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -76,10 +76,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -95,7 +95,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -377,7 +377,7 @@
 <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12 bess">
-        <img src="img/lib-separator-inner.png" alt="LIB Separator Lines in India" title="LIB Separator Lines in India" class="w-100">
+        <img src="img/lib-separator-inner.png" loading="lazy" alt="LIB Separator Lines in India" title="LIB Separator Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>LIB Separator Lines</strong></h2> <br>
@@ -430,7 +430,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -483,7 +483,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
