--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -379,7 +379,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="Cylindrical Batteries Lines in India" title="Cylindrical Batteries Lines in India"></a>
+        <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines in India"><img src="img/for-cylindrical-batteries.png" loading="lazy" class="card-img-top product-img" alt="Cylindrical Batteries Lines in India" title="Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cylindrical Batteries Lines</h5>
@@ -396,7 +396,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="Prismatic Batteries Lines in India" title="Prismatic Batteries Lines in India"></a>
+        <a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines in India"><img src="img/for-prismatic-batteries.png" loading="lazy" class="card-img-top product-img" alt="Prismatic Batteries Lines in India" title="Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Prismatic Batteries Lines</h5>
@@ -411,7 +411,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines in India"><img src="img/bess-container.png" class="card-img-top product-img" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India"></a>
+        <a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines in India"><img src="img/bess-container.png" loading="lazy" class="card-img-top product-img" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Container Assembly Lines</h5>
@@ -427,7 +427,7 @@
     <!-- Card 3 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMSs"><img src="img/bms-tester.png" title="BMSs in India" class="card-img-top product-img" alt="BMSs in India"></a>
+        <a href="#" title="BMSs"><img src="img/bms-tester.png" loading="lazy" title="BMSs in India" class="card-img-top product-img" alt="BMSs in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BMSs</h5>
@@ -448,7 +448,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="battery-pack-testers.html" title="Battery Pack Tester in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India"></a>
+        <a href="battery-pack-testers.html" title="Battery Pack Tester in India"><img src="img/battery-pack-tester.png" loading="lazy" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
@@ -464,7 +464,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="other-machines.html" title="Other Accessorial Equipments"><img src="img/other-machines.png" class="card-img-top product-img" alt="Other Accessorial Equipments in India" title="Other Accessorial Equipments in India"></a>
+        <a href="other-machines.html" title="Other Accessorial Equipments"><img src="img/other-machines.png" loading="lazy" class="card-img-top product-img" alt="Other Accessorial Equipments in India" title="Other Accessorial Equipments in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Other Accessorial Equipments</h5>
@@ -481,7 +481,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/battery-test-quality-lab.png" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
+        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/battery-test-quality-lab.png" loading="lazy" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Quality Test Lab</h5>
@@ -502,7 +502,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-battery-raw-material.html" title="Raw Materials in India"><img src="img/lithium-battery-raw-material.png" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
+        <a href="lithium-battery-raw-material.html" title="Raw Materials in India"><img src="img/lithium-battery-raw-material.png" loading="lazy" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Raw Materials</h5>
@@ -518,7 +518,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bess-cooling-system.html" title="BESS Cooling System"><img src="img/bess-cooling.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
+        <a href="bess-cooling-system.html" title="BESS Cooling System"><img src="img/bess-cooling.png" loading="lazy" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Cooling System</h5>
@@ -535,7 +535,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="agv-auto-transportation.html" title="AGV Auto Transportation"><img src="img/agv-auto.png" class="card-img-top product-img" alt="AGV Auto Transportation in India" title="AGV Auto Transportation in India"></a>
+        <a href="agv-auto-transportation.html" title="AGV Auto Transportation"><img src="img/agv-auto.png" loading="lazy" class="card-img-top product-img" alt="AGV Auto Transportation in India" title="AGV Auto Transportation in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">AGV Auto Transportation</h5>
@@ -584,7 +584,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -637,7 +637,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
