--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -379,7 +379,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lib-separator-lines.html" title="LIB Separator Lines in India"><img src="img/lib-seperator.png" class="card-img-top product-img" alt="LIB Separator Lines in India" title="LIB Separator Lines in India"></a>
+        <a href="lib-separator-lines.html" title="LIB Separator Lines in India"><img src="img/lib-seperator.png" loading="lazy" class="card-img-top product-img" alt="LIB Separator Lines in India" title="LIB Separator Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">LIB Separator Lines</h5>
@@ -395,7 +395,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="giga-factories.html" title="Giga Factories in India"><img src="img/giga-factories.png" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
+        <a href="giga-factories.html" title="Giga Factories in India"><img src="img/giga-factories.png" loading="lazy" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Giga Factories</h5>
@@ -412,7 +412,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lab-pilot-lines.html" title="Lab/Pilot Lines in India"><img src="img/lab-pilot-line.png" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
+        <a href="lab-pilot-lines.html" title="Lab/Pilot Lines in India"><img src="img/lab-pilot-line.png" loading="lazy" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lab/Pilot Lines</h5>
@@ -434,7 +434,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials in India"><img src="img/lithium-cell-raw-material.png" class="card-img-top product-img" alt="Lithium Cell Raw Materials in India" title="Lithium Cell Raw Materials in India"></a>
+        <a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials in India"><img src="img/lithium-cell-raw-material.png" loading="lazy" class="card-img-top product-img" alt="Lithium Cell Raw Materials in India" title="Lithium Cell Raw Materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lithium Cell Raw Materials</h5>
@@ -484,7 +484,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -537,7 +537,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
