--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -381,7 +381,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        ><img src="img/copper-foil.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India">
+        ><img src="img/copper-foil.png" loading="lazy" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Copper Foil</h5>
@@ -396,7 +396,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/aluminum-foil.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India">
+        <img src="img/aluminum-foil.png" loading="lazy" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Aluminum Foil</h5>
@@ -412,7 +412,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/lib-seperator-film.png" class="card-img-top product-img" alt="LIB Separator Film in India" title="LIB Separator Film in India">
+        <img src="img/lib-seperator-film.png" loading="lazy" class="card-img-top product-img" alt="LIB Separator Film in India" title="LIB Separator Film in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">LIB Separator Film</h5>
@@ -433,7 +433,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/electrolute.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India">
+        <img src="img/electrolute.png" loading="lazy" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Electrolyte</h5>
@@ -448,7 +448,7 @@
     <!-- Card 2 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="casing.html" title="LIB Cell Casing in India"><img src="img/lib-cell-casing.png" class="card-img-top product-img" alt="LIB Cell Casing in India" title="LIB Cell Casing in India"></a>
+        <a href="casing.html" title="LIB Cell Casing in India"><img src="img/lib-cell-casing.png" loading="lazy" class="card-img-top product-img" alt="LIB Cell Casing in India" title="LIB Cell Casing in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">LIB Cell Casing</h5>
@@ -498,7 +498,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -551,7 +551,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
