--- a/prismatic-batteries-lines.html
+++ b/prismatic-batteries-lines.html
@@ -78,10 +78,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -97,7 +97,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -376,7 +376,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines Prismatic Batteries Lines in India"><img src="img/prismatic-semi-auto.png" class="card-img-top product-img" alt="Semi Auto Lines Prismatic Batteries Lines in India" title="Semi Auto Lines Prismatic Batteries Lines in India"></a>
+        <a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines Prismatic Batteries Lines in India"><img src="img/prismatic-semi-auto.png" loading="lazy" class="card-img-top product-img" alt="Semi Auto Lines Prismatic Batteries Lines in India" title="Semi Auto Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Semi Auto Lines</h5>
@@ -393,7 +393,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="automatic-lines.html" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/automatic-assembly-line.png" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
+        <a href="automatic-lines.html" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/automatic-assembly-line.png" loading="lazy" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Automatic Lines</h5>
@@ -410,7 +410,7 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="laser-welding-machines.html" title="5V 20A 8CH in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
+        <a href="laser-welding-machines.html" title="5V 20A 8CH in India"><img src="img/prismatic-welding-machine.png" loading="lazy" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title ">Laser Welding Machine</h5>
@@ -430,7 +430,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="cell-testers-for-prismatic.html" title="Cell Testers Prismatic Batteries Lines in India"><img src="img/prismatic-cell-tester.png" class="card-img-top product-img" alt="Cell Testers Prismatic Batteries Lines in India" title="Cell Testers Prismatic Batteries Lines in India"></a>
+        <a href="cell-testers-for-prismatic.html" title="Cell Testers Prismatic Batteries Lines in India"><img src="img/prismatic-cell-tester.png" loading="lazy" class="card-img-top product-img" alt="Cell Testers Prismatic Batteries Lines in India" title="Cell Testers Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
@@ -446,7 +446,7 @@
     <!-- Card 1 -->
              <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="prismatic-battery-pack-testers.html" title="Prismatic Battery Pack Testers in India"><img src="img/power-battery.png" class="card-img-top product-img" alt="Prismatic Battery Pack Testers in India" title="Prismatic Battery Pack Testers in India"></a>
+        <a href="prismatic-battery-pack-testers.html" title="Prismatic Battery Pack Testers in India"><img src="img/power-battery.png" loading="lazy" class="card-img-top product-img" alt="Prismatic Battery Pack Testers in India" title="Prismatic Battery Pack Testers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Prismatic Battery Pack Testers</h5>
@@ -461,7 +461,7 @@
     </div>
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="prismatic-sorting-machines.html" title="Sorting Machine Prismatic Batteries Lines in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine Prismatic Batteries Lines in India" title="Sorting Machine Prismatic Batteries Lines in India"></a>
+        <a href="prismatic-sorting-machines.html" title="Sorting Machine Prismatic Batteries Lines in India"><img src="img/prismatic-sorting-machine.png" loading="lazy" class="card-img-top product-img" alt="Sorting Machine Prismatic Batteries Lines in India" title="Sorting Machine Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
@@ -513,7 +513,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -566,7 +566,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
