--- a/solar-panel-production-lines.html
+++ b/solar-panel-production-lines.html
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -378,7 +378,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="semi-auto-lines.html" title="Semi Auto Line in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Semi Auto Line in India" title="Semi Auto Line in India"></a>
+        <a href="semi-auto-lines.html" title="Semi Auto Line in India"><img src="img/turnkey-automation.png" loading="lazy" class="card-img-top product-img" alt="Semi Auto Line in India" title="Semi Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Semi Auto Lines</h5>
@@ -395,7 +395,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/fully-automatic-new.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
+        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/fully-automatic-new.png" loading="lazy" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Fully Auto Lines</h5>
@@ -412,7 +412,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="tabber-stringer.html" title="Tabber Stringers in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
+        <a href="tabber-stringer.html" title="Tabber Stringers in India"><img src="img/stinger.png" loading="lazy" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Tabber Stringers</h5>
@@ -433,7 +433,7 @@
     <!-- Card 1 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="laminator.html" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
+        <a href="laminator.html" title="Laminator in India"><img src="img/laminator.png" loading="lazy" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laminator</h5>
@@ -448,7 +448,7 @@
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="laser-cutters.html" title="Laser Cutters in India"><img src="img/sun-simulator.png" class="card-img-top product-img" alt="Laser Cutters in India" title="Laser Cutters in India"></a>
+        <a href="laser-cutters.html" title="Laser Cutters in India"><img src="img/sun-simulator.png" loading="lazy" class="card-img-top product-img" alt="Laser Cutters in India" title="Laser Cutters in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laser Cutters</h5>
@@ -500,7 +500,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -553,7 +553,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
