--- a/solar-pv.html
+++ b/solar-pv.html
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -378,7 +378,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-panel-production-lines.html" title="Solar Panel Production Line in India"><img src="img/solar-panel-production-turnkey-line.png" class="card-img-top product-img" alt="Solar Panel Production Line in India" title="Solar Panel Production Line in India"></a>
+        <a href="solar-panel-production-lines.html" title="Solar Panel Production Line in India"><img src="img/solar-panel-production-turnkey-line.png" loading="lazy" class="card-img-top product-img" alt="Solar Panel Production Line in India" title="Solar Panel Production Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Panel Production Lines</h5>
@@ -395,7 +395,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-cell-production-lines.html" title="Solar Cell Production Line in India"><img src="img/solar-cell-production-lines.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
+        <a href="solar-cell-production-lines.html" title="Solar Cell Production Line in India"><img src="img/solar-cell-production-lines.png" loading="lazy" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Cell Production Lines</h5>
@@ -411,7 +411,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="pv-reliability-turnkey-lab.html" title="PV Reliability Turnkey Lab in India"><img src="img/pv-reliability-turnkey-lab.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
+        <a href="pv-reliability-turnkey-lab.html" title="PV Reliability Turnkey Lab in India"><img src="img/pv-reliability-turnkey-lab.png" loading="lazy" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">PV Reliability Turnkey Lab</h5>
@@ -432,7 +432,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="raw-materials.html" title="Raw Materials in India"><img src="img/raw-materials.png" class="card-img-top product-img" alt="Raw Materials" title="Raw Materials in India"></a>
+        <a href="raw-materials.html" title="Raw Materials in India"><img src="img/raw-materials.png" loading="lazy" class="card-img-top product-img" alt="Raw Materials" title="Raw Materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Raw Materials</h5>
@@ -449,7 +449,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-       <a href="solar-epc-components.html" title="Solar EPC Components in India"><img src="img/solar-epc-components.png" class="card-img-top product-img" alt="Solar EPC components in India" title="Solar EPC components in India"></a>
+       <a href="solar-epc-components.html" title="Solar EPC Components in India"><img src="img/solar-epc-components.png" loading="lazy" class="card-img-top product-img" alt="Solar EPC components in India" title="Solar EPC components in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar EPC components</h5>
@@ -500,7 +500,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -553,7 +553,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
