--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -18,14 +18,14 @@
 <meta property="og:description" content="Complete turnkey assembly lines for cylindrical lithium battery production — automation for welding, testing, sorting, and cell assembly to ensure efficiency and precision."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.indygreentech.com/turnkey-assembly-lines.html"/>
-<meta property="og:image" content="https://www.indygreentech.com/images/turnkey-assembly-lines.png"/>
+<meta property="og:image" content="https://www.indygreentech.com/images/turnkey-assembly-lines.png" loading="lazy"/>
 <meta property="og:site_name" content="Indygreen Technologies"/>
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Turnkey Assembly Lines for Cylindrical Lithium Batteries | Indygreen "/>
 <meta name="twitter:description" content="High-performance turnkey assembly lines for cylindrical lithium battery manufacturing — from cell assembly to testing and sorting automation."/>
-<meta name="twitter:image" content="https://www.indygreentech.com/images/turnkey-assembly-lines.png"/>
+<meta name="twitter:image" content="https://www.indygreentech.com/images/turnkey-assembly-lines.png" loading="lazy"/>
 <meta name="twitter:site" content="@IndygreenTech"/>
 
 
@@ -77,10 +77,10 @@
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa-facebook text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-instagram text-white" aria-hidden="true"></i></a></li>
 <li class="list-inline-item border-0"><a href="#"><i class="fa fa fa-youtube-play text-white" aria-hidden="true"></i></a></li>
-<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" alt="India" title="India"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" alt="Canada" title="Canada"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" alt="USA" title="USA"></a></li>
-<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" alt="Italy" title="Italy"></a></li>
+<li class="list-inline-item border-0 ml-4"><a href="#"><img src="img/india.png" loading="lazy" alt="India" title="India"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/canada.png" loading="lazy" alt="Canada" title="Canada"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/united-states-of-america.png" loading="lazy" alt="USA" title="USA"></a></li>
+<li class="list-inline-item border-0"><a href="#"><img src="img/italy.png" loading="lazy" alt="Italy" title="Italy"></a></li>
 
 </ul>
 </div>
@@ -96,7 +96,7 @@
 <div class="row">
 
 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="index.html" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" loading="lazy" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-xs-12 nave_side align-self-center">
@@ -381,7 +381,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/turnkey-assembly-lines.png" alt="Turnkey Assembly Lines in India" title="Turnkey Assembly Lines in India" class="w-100">
+        <img src="img/turnkey-assembly-lines.png" loading="lazy" alt="Turnkey Assembly Lines in India" title="Turnkey Assembly Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Turnkey Assembly Lines</strong></h2> <br>
@@ -427,7 +427,7 @@
     </ul>
     </div>-->
     <div class="app-image col-lg-10">
-      <img src="img/turneky-application.png" alt="Applications of Turnkey Assembly Lines" title="Applications of Turnkey Assembly Lines" class="w-100">
+      <img src="img/turneky-application.png" loading="lazy" alt="Applications of Turnkey Assembly Lines" title="Applications of Turnkey Assembly Lines" class="w-100">
     </div>
     </div>
 </div>
@@ -478,7 +478,7 @@
 
   <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
-<img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
+<img src="img/scanner.png" loading="lazy" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
 
 
@@ -531,7 +531,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
+<img src="img/top.png" loading="lazy" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
